--- a/src/pages/Home/FeaturesCards.module.css
+++ b/src/pages/Home/FeaturesCards.module.css
@@ -14,7 +14,7 @@
   &::after {
     content: "";
     display: block;
-    background-color: var(--mantine-color-blue-filled);
+    background-color: #06b6d4;
     width: rem(45px);
     height: rem(2px);
     margin-top: var(--mantine-spacing-sm);
@@ -32,7 +32,7 @@
   &::after {
     content: "";
     display: block;
-    background-color: var(--mantine-color-blue-filled);
+    background-color: #06b6d4;
     width: rem(45px);
     height: rem(2px);
     margin-top: var(--mantine-spacing-sm);
