fix dark theme styling

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 @tailwind utilities;
 
 :root[data-mantine-color-scheme="dark"] {
-  --mantine-color-body: #0e141f !important;
+  --mantine-color-body: #0e141f;
+  --mantine-color-dark-6: #0e141f;
 }
 
 body {
