custom colors for faq active item

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root[data-mantine-color-scheme="dark"] {
   --mantine-color-body: #0e141f;
   --mantine-color-dark-6: #0e141f;
+  --mantine-color-dark-7: #0d121c;
 }
 
 body {
