maybe a bit darker...

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root[data-mantine-color-scheme="dark"] {
   --mantine-color-body: #0e141f;
-  --mantine-color-dark-6: #121a29;
+  --mantine-color-dark-6: #0f1624;
   --mantine-color-dark-7: #0d121c;
 }
 
