--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  @apply dark:bg-gray-950 bg-slate-100;
+  @apply bg-gray-950;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
